force-app/main/default/objects/Brand__c/Brand__c.object-meta.xml
<CustomObject>
    <description>It defines the Brand Information. A series can belong to a particular brand.</description>
    <label>Brand</label>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>