force-app/main/default/objects/Brand__c/fields/Customer_Support_Team__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Support Team</label>
    <referenceTo>Customer_Services_Team__c</referenceTo>
    <relationshipLabel>Brands</relationshipLabel>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>