force-app/main/default/objects/Brand__c/fields/Sales_Ops_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Business_Hours__c</fullName>
    <description>This field used in email template to populate working hours for Sales Ops cases.</description>
    <label>Sales Ops Business Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>