force-app/main/default/objects/Brand__c/fields/SSC_Email_Distribution_ID__c.field-meta.xml
<CustomField>
    <fullName>SSC_Email_Distribution_ID__c</fullName>
    <description>Email for SSC Distribution.</description>
    <label>SSC Email Distribution ID</label>
    <type>Email</type>
</CustomField>