force-app/main/default/objects/Brand__c/fields/x_Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>x_Brand_Code__c</fullName>
    <description>This field stores the Brand Code.</description>
    <label>Brand Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>